# metalang99

./: .clang-format  .gitignore  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  IDIOMS.md  LANG.md  README.md  SUMMARY.md  check-fmt.sh  fmt.sh  list-manipulation.md  optimisation_tips.md  optimization_tips.md  syntax-and-semantics.md
.github/workflows/: c-cpp.yml
bench/: 100_call.h  100_v.h  README.md  compare_25_items.h  list_of_100_items.h  list_of_63_items.h  many_call_in_arg_pos.h
docs/: .buildinfo  agony__pp_8h.html  agony__pp_8h_source.html  assert.rst  assert_8h.html  assert_8h.js  assert_8h__dep__incl.md5  assert_8h_source.html  aux.rst  aux_8h.html  aux_8h.js  aux_8h__dep__incl.md5  aux_8h_source.html  bool.rst  choice.rst  choice_8h.html  choice_8h.js  choice_8h__dep__incl.md5  choice_8h_source.html  conf.py  control.rst  control_8h.html  control_8h.js  control_8h__dep__incl.md5  control_8h_source.html  dir_000000_000001.html  dir_1d70903e8e58ccf7ac43599fcc24461a.html  dir_1d70903e8e58ccf7ac43599fcc24461a.js  dir_31d0d735c09314cedc2e9a759a5b8d35.html  dir_31d0d735c09314cedc2e9a759a5b8d35.js  dir_8b54cf64a24d33e173ded5e34b1cf731.html  dir_8b54cf64a24d33e173ded5e34b1cf731.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_e760eab8d0480921b9f1322654973391.html  dir_e760eab8d0480921b9f1322654973391.js  doxygen.css  either.rst  either_8h.html  (+116 more)
docs/.doctrees/: environment.pickle  index.doctree
docs/_static/: basic.css  bizstyle.js  flasky.css  pygments.css  pyramid.css  scrolls.css  sphinxdoc.css  traditional.css
docs/html/: menudata.js
docs/latex/: refman.tex
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  search.css  searchdata.js
doxygen/: header.html
etudes/calculi/: ski.c
examples/: CMakeLists.txt  ackermann.c  binary_tree.c  demo.c  duffs_device.c  factorial.c  lambda_calculus.c  match_string.c  overload.c  rectangle.c
include/: agony_pp.h  epilepsy.h  insult.h  koshmar.h  koshmar_pp.h  macrolop.h  metalang99.h
include/agony_pp/: aux.h  control.h  eval.h  lang.h  limits.h  logical.h  overload.h  uint.h  variadics.h
include/epilepsy/: assert.h  aux.h  choice.h  control.h  either.h  eval.h  fn.h  lang.h  limits.h  list.h  logical.h  maybe.h  misc.h  overload.h  record.h  tuple.h  uint.h  variadics.h
include/insult/: aux.h  control.h  eval.h  lang.h  limits.h  logical.h  overload.h  uint.h  variadics.h
include/koshmar/: call_macro.h  cat.h  emptiness.h  expand.h  overload.h  rec.h  stringify.h  variadics.h
include/koshmar_pp/: aux.h  bool.h  call_macro.h  cat.h  comma.h  control.h  emptiness.h  empty.h  eval.h  expand.h  for.h  if_then_else.h  limits.h  logical.h  numerics.h  overload.h  rec.h  stringify.h  uint.h  variadics.h
include/macrolop/: assert.h  aux.h  control.h  eval.h  lang.h  limits.h  logical.h  overload.h  uint.h  variadics.h
include/metalang99/: assert.h  aux.h  bool.h  choice.h  control.h  either.h  eval.h  gen.h  ident.h  lang.h  list.h  logical.h  maybe.h  misc.h  nat.h  seq.h  (+5 more)
scripts/: CMakeLists.txt  amalgamate.py  bench.sh  check-arities.py  check-fmt.sh  fmt.sh  gen-rec.py  gen_docs.py  gen_docs.sh  gen_rec.c  gen_rec.py  open-spec.sh  open_docs.sh  spec.sh  test-all.sh  test-examples.sh  test.sh
spec/: references.bib  spec.tex
sphinx/: conf.py
tests/: CMakeLists.txt  assert.c  assert.h  assert_empty.h  aux.c  aux.h  bool.h  call_macro.h  cat.h  choice.c  choice.h  comma.h  control.c  control.h  either.c  either.h  engine.h  eval.c  eval.h  fn.h  for.h  gen.c  ident.c  if_then_else.h  lang.c  lang.h  list.c  list.h  logical.c  logical.h  main.c  maybe.c  maybe.h  misc.c  misc.h  nat.c  numerics.h  overload.h  rec.h  run.sh  (+10 more)
tests/aux/: call_macro.h  cat.h  comma.h  stringify.h
tests/control/: if.h  while.h
tests/engine/: term.h
tests/eval/: rec.h
tests/gen_sym/: 2.h
tests/rec/: direct.h  indirect.h
tests/variadics/: apply.h  count.h  get.h
(+239 files in other folders)
